Fix logo alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3307,6 +3307,6 @@ input, select, textarea {
   width: 30px;
   height: auto;
   position: absolute;
-  top: 50%;
+  vertical-align: middle;
   padding-left: 10px;
 }
